<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/img_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/img_item_photo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        tools:text="@string/item_name" />

    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_item_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="5"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        tools:text="@string/detail" />
</androidx.constraintlayout.widget.ConstraintLayout>