<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@android:color/white"
        tools:context=".MyActivity">

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_baseline_share_24"
            android:contentDescription="@string/share_icon"
            android:textSize="12sp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_image_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/iv_content_detail_user" />


        <TextView
            android:id="@+id/tv_username_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_name_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/empty_string"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/empty_string"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/empty_string"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="30dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/empty_string"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/repository"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="30dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/empty_string"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/following"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="30dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/empty_string"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/follower"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>